# MCP_project

./: README.md  main.py  pyproject.toml  requirements.txt
mcp-server-client/: app.py  mcp-client-langchain_sse.py  mcp-client-langchain_stdio.py  mcp-client.py  mcp-server.json  mcp-server.py  run.sh
mcp-server-client/pages/: 1_Server.py  2_Client.py
