[project]
name = "mcp-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "mcp[cli]>=1.27.0",
    "mcp-use>=1.7.0",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "streamlit>=1.56.0",
    "psutil>=7.2.2",
]
